// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers Build indy proof request from template containing attributes group 1`] = `
Object {
  "indy": Object {
    "name": "Practising lawyer",
    "nonce": "1677766511505",
    "requestedAttributes": Map {
      "referent_0" => ProofAttributeInfo {
        "name": undefined,
        "names": Array [
          "Given Name",
          "Surname",
          "PPID",
          "Member Status",
        ],
        "nonRevoked": undefined,
        "restrictions": Array [
          AttributeFilter {
            "attributeValue": undefined,
            "credentialDefinitionId": undefined,
            "issuerDid": undefined,
            "schemaId": "XUxBrVSALWHLeycAUhrNr9:2:Member Card:1.5.1",
            "schemaIssuerDid": undefined,
            "schemaName": undefined,
            "schemaVersion": undefined,
          },
        ],
      },
    },
    "requestedPredicates": Map {},
    "version": "0.0.1",
  },
}
`;

exports[`Helpers Build indy proof request from template containing two requested attributes 1`] = `
Object {
  "indy": Object {
    "name": "Full name",
    "nonce": "1677766511505",
    "requestedAttributes": Map {
      "referent_0" => ProofAttributeInfo {
        "name": "given_names",
        "names": undefined,
        "nonRevoked": undefined,
        "restrictions": Array [
          AttributeFilter {
            "attributeValue": undefined,
            "credentialDefinitionId": undefined,
            "issuerDid": undefined,
            "schemaId": "XUxBrVSALWHLeycAUhrNr9:2:Person:1.0",
            "schemaIssuerDid": undefined,
            "schemaName": undefined,
            "schemaVersion": undefined,
          },
        ],
      },
      "referent_1" => ProofAttributeInfo {
        "name": "family_name",
        "names": undefined,
        "nonRevoked": undefined,
        "restrictions": Array [
          AttributeFilter {
            "attributeValue": undefined,
            "credentialDefinitionId": undefined,
            "issuerDid": undefined,
            "schemaId": "XUxBrVSALWHLeycAUhrNr9:2:Person:1.0",
            "schemaIssuerDid": undefined,
            "schemaName": undefined,
            "schemaVersion": undefined,
          },
        ],
      },
    },
    "requestedPredicates": Map {},
    "version": "0.0.1",
  },
}
`;

exports[`Helpers Build indy proof request from template containing two requested attributes and predicate 1`] = `
Object {
  "indy": Object {
    "name": "19+ and Full name",
    "nonce": "1677766511505",
    "requestedAttributes": Map {
      "referent_0" => ProofAttributeInfo {
        "name": undefined,
        "names": Array [
          "given_names",
          "family_name",
        ],
        "nonRevoked": undefined,
        "restrictions": Array [
          AttributeFilter {
            "attributeValue": undefined,
            "credentialDefinitionId": undefined,
            "issuerDid": undefined,
            "schemaId": "XUxBrVSALWHLeycAUhrNr9:2:Person:1.0",
            "schemaIssuerDid": undefined,
            "schemaName": undefined,
            "schemaVersion": undefined,
          },
        ],
      },
    },
    "requestedPredicates": Map {
      "referent_1" => ProofPredicateInfo {
        "name": "birthdate_dateint",
        "nonRevoked": undefined,
        "predicateType": ">=",
        "predicateValue": 18,
        "restrictions": Array [
          AttributeFilter {
            "attributeValue": undefined,
            "credentialDefinitionId": undefined,
            "issuerDid": undefined,
            "schemaId": "XUxBrVSALWHLeycAUhrNr9:2:Person:1.0",
            "schemaIssuerDid": undefined,
            "schemaName": undefined,
            "schemaVersion": undefined,
          },
        ],
      },
    },
    "version": "0.0.1",
  },
}
`;

exports[`Helpers Build indy proof request from template id 1`] = `
Object {
  "indy": Object {
    "name": "Full name",
    "nonce": "1677766511505",
    "requestedAttributes": Map {
      "referent_0" => ProofAttributeInfo {
        "name": "given_names",
        "names": undefined,
        "nonRevoked": undefined,
        "restrictions": Array [
          AttributeFilter {
            "attributeValue": undefined,
            "credentialDefinitionId": undefined,
            "issuerDid": undefined,
            "schemaId": "XUxBrVSALWHLeycAUhrNr9:2:Person:1.0",
            "schemaIssuerDid": undefined,
            "schemaName": undefined,
            "schemaVersion": undefined,
          },
        ],
      },
      "referent_1" => ProofAttributeInfo {
        "name": "family_name",
        "names": undefined,
        "nonRevoked": undefined,
        "restrictions": Array [
          AttributeFilter {
            "attributeValue": undefined,
            "credentialDefinitionId": undefined,
            "issuerDid": undefined,
            "schemaId": "XUxBrVSALWHLeycAUhrNr9:2:Person:1.0",
            "schemaIssuerDid": undefined,
            "schemaName": undefined,
            "schemaVersion": undefined,
          },
        ],
      },
    },
    "requestedPredicates": Map {},
    "version": "0.0.1",
  },
}
`;
